k8s_solution/api-svc-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: lb-backend-service
  namespace: user-management
spec:
  type: LoadBalancer
  selector:
    app: backend-app
  ports:
    - port: 80
      targetPort: 3000
