k8s_solution/ui-svc-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: lb-frontend-service
  namespace: user-management
spec:
  type: LoadBalancer
  selector:
    app: frontend-app
  ports:
    - port: 80
      targetPort: 80
